syntax = "proto3";

// AI 提示：这是项目中的第二个 Service 文件（BarService）。
// 每种资源有自己的 service。
package api.demo;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "demo/foo.proto";
import "demo/bar.proto";

// AI 提示：在复制时，请修改路径和包名为你的业务名。
option go_package = "store/api/demo;demopb";

// BarService 处理 Bar 资源的业务逻辑及管理任务。
service BarService {

  // CreateBar: 创建一个新的 Bar。
  rpc CreateBar(CreateBarRequest) returns (Bar) {
    option (google.api.http) = {
      // AI 提示：路径命名为 /api/{service_name_short}/资源名
      post: "/api/ba/bars"
      body: "*"
    };
  }

  // GetBar: 获取 Bar 详情。
  rpc GetBar(GetBarRequest) returns (Bar) {
    option (google.api.http) = {
      get: "/api/ba/bars/{id}"
    };
  }

  // UpdateBar: 修改 Bar。
  rpc UpdateBar(UpdateBarRequest) returns (Bar) {
    option (google.api.http) = {
      patch: "/api/ba/bars/{id}"
      body: "*"
    };
  }

  // DeleteBar: 删除 Bar。
  rpc DeleteBar(DeleteBarRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/ba/bars/{id}"
    };
  }

  // ListBars: 获取 Bar 列表。
  rpc ListBars(ListBarsRequest) returns (BarList) {
    option (google.api.http) = {
      get: "/api/ba/bars"
    };
  }
}

// --- Request/Response 相关的 Message 放在 Service 文件中 ---

message CreateBarRequest {
  string fooId = 1;
  map<string, string> config = 2;
}

message GetBarRequest {
  string id = 1;
}

message UpdateBarRequest {
  string id = 1;
  string status = 2;
  map<string, string> config = 3;
}

message DeleteBarRequest {
  string id = 1;
}

message ListBarsRequest {
  int64 page = 1;
  int64 size = 2;
  string fooId = 3; // 过滤条件
}

message BarList {
  repeated Bar list = 1;
  int64 total = 2;
}

