syntax = "proto3";

package api.usercenter;

option go_package = "store/api/usercenter;ucpb";

message User {
  string _id = 1 [json_name = '_id'];
  string name = 2;
  string avatar = 3;
  string key = 4;
  string phone = 5;
  int64 createdAt = 6;
  string nickname = 7;
  string email = 8;

  map<string, string> extra = 20;
}
